// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`circle variant > Render size large 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 64px;
  height: 64px;
  box-sizing: border-box;
  border-radius: 50%;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="64"
    width="64"
  />
</div>
`;

exports[`circle variant > Render size medium 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  box-sizing: border-box;
  border-radius: 50%;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="40"
    width="40"
  />
</div>
`;

exports[`circle variant > Render size small 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 32px;
  height: 32px;
  box-sizing: border-box;
  border-radius: 50%;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="32"
    width="32"
  />
</div>
`;

exports[`circle variant > Render size tiny 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  border-radius: 50%;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="24"
    width="24"
  />
</div>
`;

exports[`circle variant > Render size undefined 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  box-sizing: border-box;
  border-radius: 50%;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="40"
    width="40"
  />
</div>
`;

exports[`square variant > Render size large 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 64px;
  height: 64px;
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="64"
    width="64"
  />
</div>
`;

exports[`square variant > Render size medium 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="40"
    width="40"
  />
</div>
`;

exports[`square variant > Render size small 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 32px;
  height: 32px;
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="32"
    width="32"
  />
</div>
`;

exports[`square variant > Render size tiny 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="24"
    width="24"
  />
</div>
`;

exports[`square variant > Render size undefined 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="40"
    width="40"
  />
</div>
`;

exports[`undefined variant > Render size large 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 64px;
  height: 64px;
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="64"
    width="64"
  />
</div>
`;

exports[`undefined variant > Render size medium 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="40"
    width="40"
  />
</div>
`;

exports[`undefined variant > Render size small 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 32px;
  height: 32px;
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="32"
    width="32"
  />
</div>
`;

exports[`undefined variant > Render size tiny 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="24"
    width="24"
  />
</div>
`;

exports[`undefined variant > Render size undefined 1`] = `
.emotion-0 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="emotion-0"
    data-testid="pbl-avatar"
    height="40"
    width="40"
  />
</div>
`;
